docs: ajustement README; fix: tests formatSize